HTTP rewrites plus as space in filename
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Link issues together to show that they're related.
Learn more.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Rémi Denis-Courmont added Component::Interface: HTTP server Difficulty::easy Severity::normal Type::bug Version::master git + 1 deleted label
added Component::Interface: HTTP server Difficulty::easy Severity::normal Type::bug Version::master git + 1 deleted label
- Rémi Denis-Courmont changed milestone to %0.8.5-test3
changed milestone to %0.8.5-test3
- Author Maintainer
(In [15082]) - Do not rewrite ?\226?\128?\156+?\226?\128?\157 as a white space when unescaping URL parameters (fixes #625 (closed)).
- Rename decode_encoded_URI as unescape_URI as it really is what is done.
- Rémi Denis-Courmont added Status::fixed label
added Status::fixed label
- Rémi Denis-Courmont closed
closed
- hartman removed Status::fixed label
removed Status::fixed label
- hartman reopened
reopened
For VLM with / character
- Author Maintainer
We've reverted to the old behavior.
- Rémi Denis-Courmont added Status::fixed label
added Status::fixed label
- Rémi Denis-Courmont closed
closed
Please register or sign in to reply