- Do not rewrite “+” as a white space when unescaping URL parameters (fixes #625). - Rename decode_encoded_URI as unescape_URI as it really is what is done.